# docs/swagger.json
@@ -3881,17 +3881,18 @@
                         "$ref": "#/definitions/domain.MachineType"
                     }
                 },
-                "createdAt": {
-                    "type": "string"
-                },
-                "deletedAt": {
-                    "type": "string"
-                },
                 "email": {
+                    "description": "Email este gol când contul are doar o adresă tehnică.",
+                    "type": "string"
+                },
+                "first_name": {
                     "type": "string"
                 },
                 "id": {
                     "type": "integer"
+                },
+                "last_name": {
+                    "type": "string"
                 },
                 "name": {
                     "type": "string"
@@ -3904,12 +3905,6 @@
                 },
                 "status": {
                     "$ref": "#/definitions/domain.OperatorStatus"
-                },
-                "updatedAt": {
-                    "type": "string"
-                },
-                "user_id": {
-                    "type": "integer"
                 }
             }
         },
@@ -5177,7 +5172,7 @@
         "handlers.CreateOperatorRequest": {
             "type": "object",
             "required": [
-                "name"
+                "first_name"
             ],
             "properties": {
                 "allowed_machine_types": {
@@ -5189,7 +5184,10 @@
                 "email": {
                     "type": "string"
                 },
-                "name": {
+                "first_name": {
+                    "type": "string"
+                },
+                "last_name": {
                     "type": "string"
                 },
                 "notes": {
@@ -5197,9 +5195,6 @@
                 },
                 "phone": {
                     "type": "string"
-                },
-                "user_id": {
-                    "type": "integer"
                 }
             }
         },
@@ -5302,7 +5297,7 @@
         "handlers.UpdateOperatorRequest": {
             "type": "object",
             "required": [
-                "name"
+                "first_name"
             ],
             "properties": {
                 "allowed_machine_types": {
@@ -5314,7 +5309,10 @@
                 "email": {
                     "type": "string"
                 },
-                "name": {
+                "first_name": {
+                    "type": "string"
+                },
+                "last_name": {
                     "type": "string"
                 },
                 "notes": {
@@ -5322,9 +5320,6 @@
                 },
                 "phone": {
                     "type": "string"
-                },
-                "user_id": {
-                    "type": "integer"
                 }
             }
         },
